maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:67: error: not found: value avnace
  	avnace()
        ^